[project]
name = "python-arcade-demo"
version = "0.1.0"
description = "Minimal movable dot game using Arcade"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Your Name" } ]
license = { file = "LICENSE" }
dependencies = [
    "arcade>=3.0.2,<4.0.0"
]

[project.scripts]
run-dot = "game.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false
